scss/jk.scss
//jk custom scss


//basic stuff
body{
}


//layout stuff
.content-area{
	margin:20% 0;
}

//headings
.fancy {
  font-family: "lust-script";
}

.hero h2{
	text-align:center;
	margin:4% auto;
	font-size:80px;
}

h3{
	margin: 2% auto;
 	text-align: center;
 	font-size: 40px;
}

h4{
	margin: 2% auto;
 	text-align: center;
 	font-size: 40px;
}

.item h5{
	text-align:center;
	font-weight:200;
}



//nav stuff

.top-bar{
	background: rgba(0, 0, 0, 0.8);
}
.top-bar-section ul li a.soc-link{
	line-height: 2.8rem !important;
	// padding:0 !important;
	margin:0 !important;
	font-size:24px;
}


//hero stuff
.hero-intro{
	margin-top:40px;
}


//masonry & layout
.masonry{
	margin:10px auto;
}
.masonry .item {
	width:240px;
	// height:200px;
 	// float: left;
 	// display:block;
 	min-height:194px;
 	margin: 20px auto;
 	// background: #fff;
 	border: 1px solid #efefef;
 	padding:10px;
 	// border-color: hsla(0, 0%, 0%, 0.5);
 	// border-radius: 4px;
}

.item{
	transition:all .2s ease-out;
}
.item:hover{
	transform: scale(1.2);
	// transition:all 1s ease-out;
	border-color:red;
	// z-index:100;
}

.looking{
	margin-top:8%;
}


//CTAs
a.btn{
	border:2px solid #efefef;
	padding:20px;
	margin:10px 0;
	display:block;
	text-align:center;
	text-transform:uppercase;
	font-weight:200;
	font-size:20px;
}

//footer
footer{
	color:#efefef;
	background:#666;
}

